Implement subject delete feature
